sintatico_novo.output
State 121 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: TOKEN_PROGRAM ID TOKEN_PONTOVIRG bloco TOKEN_PONTO

    2 bloco: secao_declaracao_variaveis_opcional secao_declaracao_subrotinas_opcional comando_composto

    3 bloco_subrot: secao_declaracao_variaveis_opcional comando_composto

    4 secao_declaracao_variaveis_opcional: ε
    5                                    | secao_declaracao_variaveis

    6 secao_declaracao_subrotinas_opcional: ε
    7                                     | secao_declaracao_subrotinas

    8 secao_declaracao_variaveis: TOKEN_VAR declaracao_variaveis TOKEN_PONTOVIRG lista_declaracao_variaveis_opcional

    9 lista_declaracao_variaveis_opcional: ε
   10                                    | lista_declaracao_variaveis_opcional declaracao_variaveis TOKEN_PONTOVIRG

   11 declaracao_variaveis: lista_identificadores TOKEN_DOISP tipo

   12 lista_identificadores: ID lista_identificadores_resto_opcional

   13 lista_identificadores_resto_opcional: ε
   14                                     | lista_identificadores_resto_opcional TOKEN_VIRG ID

   15 tipo: TOKEN_BOOLEAN
   16     | TOKEN_INTEGER

   17 secao_declaracao_subrotinas: declaracao_subrotina TOKEN_PONTOVIRG
   18                            | secao_declaracao_subrotinas declaracao_subrotina TOKEN_PONTOVIRG

   19 declaracao_subrotina: declaracao_procedimento
   20                     | declaracao_funcao

   21 declaracao_procedimento: TOKEN_PROCEDURE ID parametros_formais_opcional TOKEN_PONTOVIRG bloco_subrot

   22 declaracao_funcao: TOKEN_FUNCTION ID parametros_formais_opcional TOKEN_DOISP tipo TOKEN_PONTOVIRG bloco_subrot

   23 parametros_formais_opcional: ε
   24                            | parametros_formais

   25 parametros_formais: TOKEN_ABREPAR declaracao_parametros_lista TOKEN_FECHAPAR

   26 declaracao_parametros_lista: declaracao_parametros
   27                            | declaracao_parametros_lista TOKEN_PONTOVIRG declaracao_parametros

   28 declaracao_parametros: lista_identificadores TOKEN_DOISP tipo

   29 comando_composto: TOKEN_BEGIN comando_lista TOKEN_END

   30 comando_lista: comando
   31              | comando_lista TOKEN_PONTOVIRG comando

   32 comando: atribuicao
   33        | chamada_procedimento
   34        | condicional
   35        | repeticao
   36        | leitura
   37        | escrita
   38        | comando_composto

   39 atribuicao: ID TOKEN_ATRIB expressao

   40 chamada_procedimento: ID TOKEN_ABREPAR lista_expressoes_opcional TOKEN_FECHAPAR

   41 condicional: TOKEN_IF expressao TOKEN_THEN comando
   42            | TOKEN_IF expressao TOKEN_THEN comando TOKEN_ELSE comando

   43 repeticao: TOKEN_WHILE expressao TOKEN_DO comando

   44 leitura: TOKEN_READ TOKEN_ABREPAR lista_identificadores TOKEN_FECHAPAR

   45 escrita: TOKEN_WRITE TOKEN_ABREPAR lista_expressoes TOKEN_FECHAPAR

   46 lista_expressoes: expressao
   47                 | lista_expressoes TOKEN_VIRG expressao

   48 lista_expressoes_opcional: ε
   49                          | lista_expressoes

   50 expressao: expressao_simples
   51          | expressao_simples relacao expressao_simples

   52 relacao: TOKEN_IGUAL
   53        | TOKEN_DIF
   54        | TOKEN_MENOR
   55        | TOKEN_MENORIGUAL
   56        | TOKEN_MAIOR
   57        | TOKEN_MAIORIGUAL

   58 expressao_simples: termo
   59                  | expressao_simples op_aditivo termo

   60 op_aditivo: TOKEN_SOMA
   61           | TOKEN_SUBT
   62           | TOKEN_OR

   63 termo: fator
   64      | termo op_multiplicativo fator

   65 op_multiplicativo: TOKEN_MULT
   66                  | TOKEN_DIV
   67                  | TOKEN_AND

   68 fator: ID
   69      | ID TOKEN_ABREPAR lista_expressoes_opcional TOKEN_FECHAPAR
   70      | NUMERO
   71      | logico
   72      | TOKEN_ABREPAR expressao TOKEN_FECHAPAR
   73      | TOKEN_NOT fator
   74      | TOKEN_SUBT fator

   75 logico: TOKEN_FALSE
   76       | TOKEN_TRUE


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TOKEN_PROGRAM (258) 1
    TOKEN_VAR (259) 8
    TOKEN_PROCEDURE (260) 21
    TOKEN_FUNCTION (261) 22
    TOKEN_BEGIN (262) 29
    TOKEN_END (263) 29
    TOKEN_FALSE (264) 75
    TOKEN_TRUE (265) 76
    TOKEN_IF (266) 41 42
    TOKEN_THEN (267) 41 42
    TOKEN_ELSE (268) 42
    TOKEN_WHILE (269) 43
    TOKEN_DO (270) 43
    TOKEN_READ (271) 44
    TOKEN_WRITE (272) 45
    TOKEN_AND (273) 67
    TOKEN_OR (274) 62
    TOKEN_NOT (275) 73
    TOKEN_DIV (276) 66
    TOKEN_INTEGER (277) 16
    TOKEN_BOOLEAN (278) 15
    TOKEN_SOMA (279) 60
    TOKEN_SUBT (280) 61 74
    TOKEN_MULT (281) 65
    TOKEN_IGUAL (282) 52
    TOKEN_FECHAPAR (283) 25 40 44 45 69 72
    TOKEN_ABREPAR (284) 25 40 44 45 69 72
    TOKEN_PONTOVIRG (285) 1 8 10 17 18 21 22 27 31
    TOKEN_VIRG (286) 14 47
    TOKEN_PONTO (287) 1
    TOKEN_DIF (288) 53
    TOKEN_MAIOR (289) 56
    TOKEN_MENOR (290) 54
    TOKEN_MAIORIGUAL (291) 57
    TOKEN_MENORIGUAL (292) 55
    TOKEN_ATRIB (293) 39
    TOKEN_DOISP (294) 11 22 28
    ID <sval> (295) 1 12 14 21 22 39 40 68 69
    NUMERO <sval> (296) 70


Nonterminals, with rules where they appear

    $accept (42)
        on left: 0
    programa <no_ast> (43)
        on left: 1
        on right: 0
    bloco <no_ast> (44)
        on left: 2
        on right: 1
    bloco_subrot <no_ast> (45)
        on left: 3
        on right: 21 22
    secao_declaracao_variaveis_opcional <no_ast> (46)
        on left: 4 5
        on right: 2 3
    secao_declaracao_subrotinas_opcional <no_ast> (47)
        on left: 6 7
        on right: 2
    secao_declaracao_variaveis <no_ast> (48)
        on left: 8
        on right: 5
    lista_declaracao_variaveis_opcional <no_ast> (49)
        on left: 9 10
        on right: 8 10
    declaracao_variaveis <no_ast> (50)
        on left: 11
        on right: 8 10
    lista_identificadores <no_ast> (51)
        on left: 12
        on right: 11 28 44
    lista_identificadores_resto_opcional <no_ast> (52)
        on left: 13 14
        on right: 12 14
    tipo <sval> (53)
        on left: 15 16
        on right: 11 22 28
    secao_declaracao_subrotinas <no_ast> (54)
        on left: 17 18
        on right: 7 18
    declaracao_subrotina <no_ast> (55)
        on left: 19 20
        on right: 17 18
    declaracao_procedimento <no_ast> (56)
        on left: 21
        on right: 19
    declaracao_funcao <no_ast> (57)
        on left: 22
        on right: 20
    parametros_formais_opcional <no_ast> (58)
        on left: 23 24
        on right: 21 22
    parametros_formais <no_ast> (59)
        on left: 25
        on right: 24
    declaracao_parametros_lista <no_ast> (60)
        on left: 26 27
        on right: 25 27
    declaracao_parametros <no_ast> (61)
        on left: 28
        on right: 26 27
    comando_composto <no_ast> (62)
        on left: 29
        on right: 2 3 38
    comando_lista <no_ast> (63)
        on left: 30 31
        on right: 29 31
    comando <no_ast> (64)
        on left: 32 33 34 35 36 37 38
        on right: 30 31 41 42 43
    atribuicao <no_ast> (65)
        on left: 39
        on right: 32
    chamada_procedimento <no_ast> (66)
        on left: 40
        on right: 33
    condicional <no_ast> (67)
        on left: 41 42
        on right: 34
    repeticao <no_ast> (68)
        on left: 43
        on right: 35
    leitura <no_ast> (69)
        on left: 44
        on right: 36
    escrita <no_ast> (70)
        on left: 45
        on right: 37
    lista_expressoes <no_ast> (71)
        on left: 46 47
        on right: 45 47 49
    lista_expressoes_opcional <no_ast> (72)
        on left: 48 49
        on right: 40 69
    expressao <no_ast> (73)
        on left: 50 51
        on right: 39 41 42 43 46 47 72
    relacao <ival> (74)
        on left: 52 53 54 55 56 57
        on right: 51
    expressao_simples <no_ast> (75)
        on left: 58 59
        on right: 50 51 59
    op_aditivo <ival> (76)
        on left: 60 61 62
        on right: 59
    termo <no_ast> (77)
        on left: 63 64
        on right: 58 59 64
    op_multiplicativo <ival> (78)
        on left: 65 66 67
        on right: 64
    fator <no_ast> (79)
        on left: 68 69 70 71 72 73 74
        on right: 63 64 73 74
    logico <no_ast> (80)
        on left: 75 76
        on right: 71


State 0

    0 $accept: • programa $end

    TOKEN_PROGRAM  shift, and go to state 1

    programa  go to state 2


State 1

    1 programa: TOKEN_PROGRAM • ID TOKEN_PONTOVIRG bloco TOKEN_PONTO

    ID  shift, and go to state 3


State 2

    0 $accept: programa • $end

    $end  shift, and go to state 4


State 3

    1 programa: TOKEN_PROGRAM ID • TOKEN_PONTOVIRG bloco TOKEN_PONTO

    TOKEN_PONTOVIRG  shift, and go to state 5


State 4

    0 $accept: programa $end •

    $default  accept


State 5

    1 programa: TOKEN_PROGRAM ID TOKEN_PONTOVIRG • bloco TOKEN_PONTO

    TOKEN_VAR  shift, and go to state 6

    $default  reduce using rule 4 (secao_declaracao_variaveis_opcional)

    bloco                                go to state 7
    secao_declaracao_variaveis_opcional  go to state 8
    secao_declaracao_variaveis           go to state 9


State 6

    8 secao_declaracao_variaveis: TOKEN_VAR • declaracao_variaveis TOKEN_PONTOVIRG lista_declaracao_variaveis_opcional

    ID  shift, and go to state 10

    declaracao_variaveis   go to state 11
    lista_identificadores  go to state 12


State 7

    1 programa: TOKEN_PROGRAM ID TOKEN_PONTOVIRG bloco • TOKEN_PONTO

    TOKEN_PONTO  shift, and go to state 13


State 8

    2 bloco: secao_declaracao_variaveis_opcional • secao_declaracao_subrotinas_opcional comando_composto

    TOKEN_PROCEDURE  shift, and go to state 14
    TOKEN_FUNCTION   shift, and go to state 15

    $default  reduce using rule 6 (secao_declaracao_subrotinas_opcional)

    secao_declaracao_subrotinas_opcional  go to state 16
    secao_declaracao_subrotinas           go to state 17
    declaracao_subrotina                  go to state 18
    declaracao_procedimento               go to state 19
    declaracao_funcao                     go to state 20


State 9

    5 secao_declaracao_variaveis_opcional: secao_declaracao_variaveis •

    $default  reduce using rule 5 (secao_declaracao_variaveis_opcional)


State 10

   12 lista_identificadores: ID • lista_identificadores_resto_opcional

    $default  reduce using rule 13 (lista_identificadores_resto_opcional)

    lista_identificadores_resto_opcional  go to state 21


State 11

    8 secao_declaracao_variaveis: TOKEN_VAR declaracao_variaveis • TOKEN_PONTOVIRG lista_declaracao_variaveis_opcional

    TOKEN_PONTOVIRG  shift, and go to state 22


State 12

   11 declaracao_variaveis: lista_identificadores • TOKEN_DOISP tipo

    TOKEN_DOISP  shift, and go to state 23


State 13

    1 programa: TOKEN_PROGRAM ID TOKEN_PONTOVIRG bloco TOKEN_PONTO •

    $default  reduce using rule 1 (programa)


State 14

   21 declaracao_procedimento: TOKEN_PROCEDURE • ID parametros_formais_opcional TOKEN_PONTOVIRG bloco_subrot

    ID  shift, and go to state 24


State 15

   22 declaracao_funcao: TOKEN_FUNCTION • ID parametros_formais_opcional TOKEN_DOISP tipo TOKEN_PONTOVIRG bloco_subrot

    ID  shift, and go to state 25


State 16

    2 bloco: secao_declaracao_variaveis_opcional secao_declaracao_subrotinas_opcional • comando_composto

    TOKEN_BEGIN  shift, and go to state 26

    comando_composto  go to state 27


State 17

    7 secao_declaracao_subrotinas_opcional: secao_declaracao_subrotinas •
   18 secao_declaracao_subrotinas: secao_declaracao_subrotinas • declaracao_subrotina TOKEN_PONTOVIRG

    TOKEN_PROCEDURE  shift, and go to state 14
    TOKEN_FUNCTION   shift, and go to state 15

    $default  reduce using rule 7 (secao_declaracao_subrotinas_opcional)

    declaracao_subrotina     go to state 28
    declaracao_procedimento  go to state 19
    declaracao_funcao        go to state 20


State 18

   17 secao_declaracao_subrotinas: declaracao_subrotina • TOKEN_PONTOVIRG

    TOKEN_PONTOVIRG  shift, and go to state 29


State 19

   19 declaracao_subrotina: declaracao_procedimento •

    $default  reduce using rule 19 (declaracao_subrotina)


State 20

   20 declaracao_subrotina: declaracao_funcao •

    $default  reduce using rule 20 (declaracao_subrotina)


State 21

   12 lista_identificadores: ID lista_identificadores_resto_opcional •
   14 lista_identificadores_resto_opcional: lista_identificadores_resto_opcional • TOKEN_VIRG ID

    TOKEN_VIRG  shift, and go to state 30

    $default  reduce using rule 12 (lista_identificadores)


State 22

    8 secao_declaracao_variaveis: TOKEN_VAR declaracao_variaveis TOKEN_PONTOVIRG • lista_declaracao_variaveis_opcional

    $default  reduce using rule 9 (lista_declaracao_variaveis_opcional)

    lista_declaracao_variaveis_opcional  go to state 31


State 23

   11 declaracao_variaveis: lista_identificadores TOKEN_DOISP • tipo

    TOKEN_INTEGER  shift, and go to state 32
    TOKEN_BOOLEAN  shift, and go to state 33

    tipo  go to state 34


State 24

   21 declaracao_procedimento: TOKEN_PROCEDURE ID • parametros_formais_opcional TOKEN_PONTOVIRG bloco_subrot

    TOKEN_ABREPAR  shift, and go to state 35

    $default  reduce using rule 23 (parametros_formais_opcional)

    parametros_formais_opcional  go to state 36
    parametros_formais           go to state 37


State 25

   22 declaracao_funcao: TOKEN_FUNCTION ID • parametros_formais_opcional TOKEN_DOISP tipo TOKEN_PONTOVIRG bloco_subrot

    TOKEN_ABREPAR  shift, and go to state 35

    $default  reduce using rule 23 (parametros_formais_opcional)

    parametros_formais_opcional  go to state 38
    parametros_formais           go to state 37


State 26

   29 comando_composto: TOKEN_BEGIN • comando_lista TOKEN_END

    TOKEN_BEGIN  shift, and go to state 26
    TOKEN_IF     shift, and go to state 39
    TOKEN_WHILE  shift, and go to state 40
    TOKEN_READ   shift, and go to state 41
    TOKEN_WRITE  shift, and go to state 42
    ID           shift, and go to state 43

    comando_composto      go to state 44
    comando_lista         go to state 45
    comando               go to state 46
    atribuicao            go to state 47
    chamada_procedimento  go to state 48
    condicional           go to state 49
    repeticao             go to state 50
    leitura               go to state 51
    escrita               go to state 52


State 27

    2 bloco: secao_declaracao_variaveis_opcional secao_declaracao_subrotinas_opcional comando_composto •

    $default  reduce using rule 2 (bloco)


State 28

   18 secao_declaracao_subrotinas: secao_declaracao_subrotinas declaracao_subrotina • TOKEN_PONTOVIRG

    TOKEN_PONTOVIRG  shift, and go to state 53


State 29

   17 secao_declaracao_subrotinas: declaracao_subrotina TOKEN_PONTOVIRG •

    $default  reduce using rule 17 (secao_declaracao_subrotinas)


State 30

   14 lista_identificadores_resto_opcional: lista_identificadores_resto_opcional TOKEN_VIRG • ID

    ID  shift, and go to state 54


State 31

    8 secao_declaracao_variaveis: TOKEN_VAR declaracao_variaveis TOKEN_PONTOVIRG lista_declaracao_variaveis_opcional •
   10 lista_declaracao_variaveis_opcional: lista_declaracao_variaveis_opcional • declaracao_variaveis TOKEN_PONTOVIRG

    ID  shift, and go to state 10

    $default  reduce using rule 8 (secao_declaracao_variaveis)

    declaracao_variaveis   go to state 55
    lista_identificadores  go to state 12


State 32

   16 tipo: TOKEN_INTEGER •

    $default  reduce using rule 16 (tipo)


State 33

   15 tipo: TOKEN_BOOLEAN •

    $default  reduce using rule 15 (tipo)


State 34

   11 declaracao_variaveis: lista_identificadores TOKEN_DOISP tipo •

    $default  reduce using rule 11 (declaracao_variaveis)


State 35

   25 parametros_formais: TOKEN_ABREPAR • declaracao_parametros_lista TOKEN_FECHAPAR

    ID  shift, and go to state 10

    lista_identificadores        go to state 56
    declaracao_parametros_lista  go to state 57
    declaracao_parametros        go to state 58


State 36

   21 declaracao_procedimento: TOKEN_PROCEDURE ID parametros_formais_opcional • TOKEN_PONTOVIRG bloco_subrot

    TOKEN_PONTOVIRG  shift, and go to state 59


State 37

   24 parametros_formais_opcional: parametros_formais •

    $default  reduce using rule 24 (parametros_formais_opcional)


State 38

   22 declaracao_funcao: TOKEN_FUNCTION ID parametros_formais_opcional • TOKEN_DOISP tipo TOKEN_PONTOVIRG bloco_subrot

    TOKEN_DOISP  shift, and go to state 60


State 39

   41 condicional: TOKEN_IF • expressao TOKEN_THEN comando
   42            | TOKEN_IF • expressao TOKEN_THEN comando TOKEN_ELSE comando

    TOKEN_FALSE    shift, and go to state 61
    TOKEN_TRUE     shift, and go to state 62
    TOKEN_NOT      shift, and go to state 63
    TOKEN_SUBT     shift, and go to state 64
    TOKEN_ABREPAR  shift, and go to state 65
    ID             shift, and go to state 66
    NUMERO         shift, and go to state 67

    expressao          go to state 68
    expressao_simples  go to state 69
    termo              go to state 70
    fator              go to state 71
    logico             go to state 72


State 40

   43 repeticao: TOKEN_WHILE • expressao TOKEN_DO comando

    TOKEN_FALSE    shift, and go to state 61
    TOKEN_TRUE     shift, and go to state 62
    TOKEN_NOT      shift, and go to state 63
    TOKEN_SUBT     shift, and go to state 64
    TOKEN_ABREPAR  shift, and go to state 65
    ID             shift, and go to state 66
    NUMERO         shift, and go to state 67

    expressao          go to state 73
    expressao_simples  go to state 69
    termo              go to state 70
    fator              go to state 71
    logico             go to state 72


State 41

   44 leitura: TOKEN_READ • TOKEN_ABREPAR lista_identificadores TOKEN_FECHAPAR

    TOKEN_ABREPAR  shift, and go to state 74


State 42

   45 escrita: TOKEN_WRITE • TOKEN_ABREPAR lista_expressoes TOKEN_FECHAPAR

    TOKEN_ABREPAR  shift, and go to state 75


State 43

   39 atribuicao: ID • TOKEN_ATRIB expressao
   40 chamada_procedimento: ID • TOKEN_ABREPAR lista_expressoes_opcional TOKEN_FECHAPAR

    TOKEN_ABREPAR  shift, and go to state 76
    TOKEN_ATRIB    shift, and go to state 77


State 44

   38 comando: comando_composto •

    $default  reduce using rule 38 (comando)


State 45

   29 comando_composto: TOKEN_BEGIN comando_lista • TOKEN_END
   31 comando_lista: comando_lista • TOKEN_PONTOVIRG comando

    TOKEN_END        shift, and go to state 78
    TOKEN_PONTOVIRG  shift, and go to state 79


State 46

   30 comando_lista: comando •

    $default  reduce using rule 30 (comando_lista)


State 47

   32 comando: atribuicao •

    $default  reduce using rule 32 (comando)


State 48

   33 comando: chamada_procedimento •

    $default  reduce using rule 33 (comando)


State 49

   34 comando: condicional •

    $default  reduce using rule 34 (comando)


State 50

   35 comando: repeticao •

    $default  reduce using rule 35 (comando)


State 51

   36 comando: leitura •

    $default  reduce using rule 36 (comando)


State 52

   37 comando: escrita •

    $default  reduce using rule 37 (comando)


State 53

   18 secao_declaracao_subrotinas: secao_declaracao_subrotinas declaracao_subrotina TOKEN_PONTOVIRG •

    $default  reduce using rule 18 (secao_declaracao_subrotinas)


State 54

   14 lista_identificadores_resto_opcional: lista_identificadores_resto_opcional TOKEN_VIRG ID •

    $default  reduce using rule 14 (lista_identificadores_resto_opcional)


State 55

   10 lista_declaracao_variaveis_opcional: lista_declaracao_variaveis_opcional declaracao_variaveis • TOKEN_PONTOVIRG

    TOKEN_PONTOVIRG  shift, and go to state 80


State 56

   28 declaracao_parametros: lista_identificadores • TOKEN_DOISP tipo

    TOKEN_DOISP  shift, and go to state 81


State 57

   25 parametros_formais: TOKEN_ABREPAR declaracao_parametros_lista • TOKEN_FECHAPAR
   27 declaracao_parametros_lista: declaracao_parametros_lista • TOKEN_PONTOVIRG declaracao_parametros

    TOKEN_FECHAPAR   shift, and go to state 82
    TOKEN_PONTOVIRG  shift, and go to state 83


State 58

   26 declaracao_parametros_lista: declaracao_parametros •

    $default  reduce using rule 26 (declaracao_parametros_lista)


State 59

   21 declaracao_procedimento: TOKEN_PROCEDURE ID parametros_formais_opcional TOKEN_PONTOVIRG • bloco_subrot

    TOKEN_VAR  shift, and go to state 6

    $default  reduce using rule 4 (secao_declaracao_variaveis_opcional)

    bloco_subrot                         go to state 84
    secao_declaracao_variaveis_opcional  go to state 85
    secao_declaracao_variaveis           go to state 9


State 60

   22 declaracao_funcao: TOKEN_FUNCTION ID parametros_formais_opcional TOKEN_DOISP • tipo TOKEN_PONTOVIRG bloco_subrot

    TOKEN_INTEGER  shift, and go to state 32
    TOKEN_BOOLEAN  shift, and go to state 33

    tipo  go to state 86


State 61

   75 logico: TOKEN_FALSE •

    $default  reduce using rule 75 (logico)


State 62

   76 logico: TOKEN_TRUE •

    $default  reduce using rule 76 (logico)


State 63

   73 fator: TOKEN_NOT • fator

    TOKEN_FALSE    shift, and go to state 61
    TOKEN_TRUE     shift, and go to state 62
    TOKEN_NOT      shift, and go to state 63
    TOKEN_SUBT     shift, and go to state 64
    TOKEN_ABREPAR  shift, and go to state 65
    ID             shift, and go to state 66
    NUMERO         shift, and go to state 67

    fator   go to state 87
    logico  go to state 72


State 64

   74 fator: TOKEN_SUBT • fator

    TOKEN_FALSE    shift, and go to state 61
    TOKEN_TRUE     shift, and go to state 62
    TOKEN_NOT      shift, and go to state 63
    TOKEN_SUBT     shift, and go to state 64
    TOKEN_ABREPAR  shift, and go to state 65
    ID             shift, and go to state 66
    NUMERO         shift, and go to state 67

    fator   go to state 88
    logico  go to state 72


State 65

   72 fator: TOKEN_ABREPAR • expressao TOKEN_FECHAPAR

    TOKEN_FALSE    shift, and go to state 61
    TOKEN_TRUE     shift, and go to state 62
    TOKEN_NOT      shift, and go to state 63
    TOKEN_SUBT     shift, and go to state 64
    TOKEN_ABREPAR  shift, and go to state 65
    ID             shift, and go to state 66
    NUMERO         shift, and go to state 67

    expressao          go to state 89
    expressao_simples  go to state 69
    termo              go to state 70
    fator              go to state 71
    logico             go to state 72


State 66

   68 fator: ID •
   69      | ID • TOKEN_ABREPAR lista_expressoes_opcional TOKEN_FECHAPAR

    TOKEN_ABREPAR  shift, and go to state 90

    $default  reduce using rule 68 (fator)


State 67

   70 fator: NUMERO •

    $default  reduce using rule 70 (fator)


State 68

   41 condicional: TOKEN_IF expressao • TOKEN_THEN comando
   42            | TOKEN_IF expressao • TOKEN_THEN comando TOKEN_ELSE comando

    TOKEN_THEN  shift, and go to state 91


State 69

   50 expressao: expressao_simples •
   51          | expressao_simples • relacao expressao_simples
   59 expressao_simples: expressao_simples • op_aditivo termo

    TOKEN_OR          shift, and go to state 92
    TOKEN_SOMA        shift, and go to state 93
    TOKEN_SUBT        shift, and go to state 94
    TOKEN_IGUAL       shift, and go to state 95
    TOKEN_DIF         shift, and go to state 96
    TOKEN_MAIOR       shift, and go to state 97
    TOKEN_MENOR       shift, and go to state 98
    TOKEN_MAIORIGUAL  shift, and go to state 99
    TOKEN_MENORIGUAL  shift, and go to state 100

    $default  reduce using rule 50 (expressao)

    relacao     go to state 101
    op_aditivo  go to state 102


State 70

   58 expressao_simples: termo •
   64 termo: termo • op_multiplicativo fator

    TOKEN_AND   shift, and go to state 103
    TOKEN_DIV   shift, and go to state 104
    TOKEN_MULT  shift, and go to state 105

    $default  reduce using rule 58 (expressao_simples)

    op_multiplicativo  go to state 106


State 71

   63 termo: fator •

    $default  reduce using rule 63 (termo)


State 72

   71 fator: logico •

    $default  reduce using rule 71 (fator)


State 73

   43 repeticao: TOKEN_WHILE expressao • TOKEN_DO comando

    TOKEN_DO  shift, and go to state 107


State 74

   44 leitura: TOKEN_READ TOKEN_ABREPAR • lista_identificadores TOKEN_FECHAPAR

    ID  shift, and go to state 10

    lista_identificadores  go to state 108


State 75

   45 escrita: TOKEN_WRITE TOKEN_ABREPAR • lista_expressoes TOKEN_FECHAPAR

    TOKEN_FALSE    shift, and go to state 61
    TOKEN_TRUE     shift, and go to state 62
    TOKEN_NOT      shift, and go to state 63
    TOKEN_SUBT     shift, and go to state 64
    TOKEN_ABREPAR  shift, and go to state 65
    ID             shift, and go to state 66
    NUMERO         shift, and go to state 67

    lista_expressoes   go to state 109
    expressao          go to state 110
    expressao_simples  go to state 69
    termo              go to state 70
    fator              go to state 71
    logico             go to state 72


State 76

   40 chamada_procedimento: ID TOKEN_ABREPAR • lista_expressoes_opcional TOKEN_FECHAPAR

    TOKEN_FALSE    shift, and go to state 61
    TOKEN_TRUE     shift, and go to state 62
    TOKEN_NOT      shift, and go to state 63
    TOKEN_SUBT     shift, and go to state 64
    TOKEN_ABREPAR  shift, and go to state 65
    ID             shift, and go to state 66
    NUMERO         shift, and go to state 67

    $default  reduce using rule 48 (lista_expressoes_opcional)

    lista_expressoes           go to state 111
    lista_expressoes_opcional  go to state 112
    expressao                  go to state 110
    expressao_simples          go to state 69
    termo                      go to state 70
    fator                      go to state 71
    logico                     go to state 72


State 77

   39 atribuicao: ID TOKEN_ATRIB • expressao

    TOKEN_FALSE    shift, and go to state 61
    TOKEN_TRUE     shift, and go to state 62
    TOKEN_NOT      shift, and go to state 63
    TOKEN_SUBT     shift, and go to state 64
    TOKEN_ABREPAR  shift, and go to state 65
    ID             shift, and go to state 66
    NUMERO         shift, and go to state 67

    expressao          go to state 113
    expressao_simples  go to state 69
    termo              go to state 70
    fator              go to state 71
    logico             go to state 72


State 78

   29 comando_composto: TOKEN_BEGIN comando_lista TOKEN_END •

    $default  reduce using rule 29 (comando_composto)


State 79

   31 comando_lista: comando_lista TOKEN_PONTOVIRG • comando

    TOKEN_BEGIN  shift, and go to state 26
    TOKEN_IF     shift, and go to state 39
    TOKEN_WHILE  shift, and go to state 40
    TOKEN_READ   shift, and go to state 41
    TOKEN_WRITE  shift, and go to state 42
    ID           shift, and go to state 43

    comando_composto      go to state 44
    comando               go to state 114
    atribuicao            go to state 47
    chamada_procedimento  go to state 48
    condicional           go to state 49
    repeticao             go to state 50
    leitura               go to state 51
    escrita               go to state 52


State 80

   10 lista_declaracao_variaveis_opcional: lista_declaracao_variaveis_opcional declaracao_variaveis TOKEN_PONTOVIRG •

    $default  reduce using rule 10 (lista_declaracao_variaveis_opcional)


State 81

   28 declaracao_parametros: lista_identificadores TOKEN_DOISP • tipo

    TOKEN_INTEGER  shift, and go to state 32
    TOKEN_BOOLEAN  shift, and go to state 33

    tipo  go to state 115


State 82

   25 parametros_formais: TOKEN_ABREPAR declaracao_parametros_lista TOKEN_FECHAPAR •

    $default  reduce using rule 25 (parametros_formais)


State 83

   27 declaracao_parametros_lista: declaracao_parametros_lista TOKEN_PONTOVIRG • declaracao_parametros

    ID  shift, and go to state 10

    lista_identificadores  go to state 56
    declaracao_parametros  go to state 116


State 84

   21 declaracao_procedimento: TOKEN_PROCEDURE ID parametros_formais_opcional TOKEN_PONTOVIRG bloco_subrot •

    $default  reduce using rule 21 (declaracao_procedimento)


State 85

    3 bloco_subrot: secao_declaracao_variaveis_opcional • comando_composto

    TOKEN_BEGIN  shift, and go to state 26

    comando_composto  go to state 117


State 86

   22 declaracao_funcao: TOKEN_FUNCTION ID parametros_formais_opcional TOKEN_DOISP tipo • TOKEN_PONTOVIRG bloco_subrot

    TOKEN_PONTOVIRG  shift, and go to state 118


State 87

   73 fator: TOKEN_NOT fator •

    $default  reduce using rule 73 (fator)


State 88

   74 fator: TOKEN_SUBT fator •

    $default  reduce using rule 74 (fator)


State 89

   72 fator: TOKEN_ABREPAR expressao • TOKEN_FECHAPAR

    TOKEN_FECHAPAR  shift, and go to state 119


State 90

   69 fator: ID TOKEN_ABREPAR • lista_expressoes_opcional TOKEN_FECHAPAR

    TOKEN_FALSE    shift, and go to state 61
    TOKEN_TRUE     shift, and go to state 62
    TOKEN_NOT      shift, and go to state 63
    TOKEN_SUBT     shift, and go to state 64
    TOKEN_ABREPAR  shift, and go to state 65
    ID             shift, and go to state 66
    NUMERO         shift, and go to state 67

    $default  reduce using rule 48 (lista_expressoes_opcional)

    lista_expressoes           go to state 111
    lista_expressoes_opcional  go to state 120
    expressao                  go to state 110
    expressao_simples          go to state 69
    termo                      go to state 70
    fator                      go to state 71
    logico                     go to state 72


State 91

   41 condicional: TOKEN_IF expressao TOKEN_THEN • comando
   42            | TOKEN_IF expressao TOKEN_THEN • comando TOKEN_ELSE comando

    TOKEN_BEGIN  shift, and go to state 26
    TOKEN_IF     shift, and go to state 39
    TOKEN_WHILE  shift, and go to state 40
    TOKEN_READ   shift, and go to state 41
    TOKEN_WRITE  shift, and go to state 42
    ID           shift, and go to state 43

    comando_composto      go to state 44
    comando               go to state 121
    atribuicao            go to state 47
    chamada_procedimento  go to state 48
    condicional           go to state 49
    repeticao             go to state 50
    leitura               go to state 51
    escrita               go to state 52


State 92

   62 op_aditivo: TOKEN_OR •

    $default  reduce using rule 62 (op_aditivo)


State 93

   60 op_aditivo: TOKEN_SOMA •

    $default  reduce using rule 60 (op_aditivo)


State 94

   61 op_aditivo: TOKEN_SUBT •

    $default  reduce using rule 61 (op_aditivo)


State 95

   52 relacao: TOKEN_IGUAL •

    $default  reduce using rule 52 (relacao)


State 96

   53 relacao: TOKEN_DIF •

    $default  reduce using rule 53 (relacao)


State 97

   56 relacao: TOKEN_MAIOR •

    $default  reduce using rule 56 (relacao)


State 98

   54 relacao: TOKEN_MENOR •

    $default  reduce using rule 54 (relacao)


State 99

   57 relacao: TOKEN_MAIORIGUAL •

    $default  reduce using rule 57 (relacao)


State 100

   55 relacao: TOKEN_MENORIGUAL •

    $default  reduce using rule 55 (relacao)


State 101

   51 expressao: expressao_simples relacao • expressao_simples

    TOKEN_FALSE    shift, and go to state 61
    TOKEN_TRUE     shift, and go to state 62
    TOKEN_NOT      shift, and go to state 63
    TOKEN_SUBT     shift, and go to state 64
    TOKEN_ABREPAR  shift, and go to state 65
    ID             shift, and go to state 66
    NUMERO         shift, and go to state 67

    expressao_simples  go to state 122
    termo              go to state 70
    fator              go to state 71
    logico             go to state 72


State 102

   59 expressao_simples: expressao_simples op_aditivo • termo
